--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>1.9</maven.compiler.target>
         <gson.version>2.8.2</gson.version>
         <hibernate.version>5.2.14.Final</hibernate.version>
+        <!--<hibernate.version>4.3.11.Final</hibernate.version>-->
         <postgresql.version>42.2.1</postgresql.version>
         <jaxb.version>2.3.0</jaxb.version>
         <jetty.version>9.4.8.v20171121</jetty.version>
